--- a/components/stylesheets/base/_base.scss
+++ b/components/stylesheets/base/_base.scss
@@ -29,6 +29,7 @@ a {
 h2 {font-size: 30px;}
 h3 {font-size: 24px;}
 h4 {font-size: 18px;}
+h5 {font-size: 16px;}
 
 #wrapper {
 	position: relative;
@@ -79,11 +80,33 @@ h4 {font-size: 18px;}
 	}
 }
 
-input:not([type]):focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=search]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=url]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+input:not([type]):focus:not([readonly]),
+input[type=date]:focus:not([readonly]), 
+input[type=datetime-local]:focus:not([readonly]), 
+input[type=email]:focus:not([readonly]), 
+input[type=number]:focus:not([readonly]), 
+input[type=password]:focus:not([readonly]), 
+input[type=search]:focus:not([readonly]), 
+input[type=tel]:focus:not([readonly]), 
+input[type=text]:focus:not([readonly]), 
+input[type=time]:focus:not([readonly]), 
+input[type=url]:focus:not([readonly]), 
+textarea.materialize-textarea:focus:not([readonly]) {
 	border-color: #ffcd00;
 	box-shadow: 0 1px 0 0 #ffcd00;
 }
 
-input:not([type]):focus:not([readonly])+label, input[type=date]:focus:not([readonly])+label, input[type=datetime-local]:focus:not([readonly])+label, input[type=email]:focus:not([readonly])+label, input[type=number]:focus:not([readonly])+label, input[type=password]:focus:not([readonly])+label, input[type=search]:focus:not([readonly])+label, input[type=tel]:focus:not([readonly])+label, input[type=text]:focus:not([readonly])+label, input[type=time]:focus:not([readonly])+label, input[type=url]:focus:not([readonly])+label, textarea.materialize-textarea:focus:not([readonly])+label {
+input:not([type]):focus:not([readonly])+label, 
+input[type=date]:focus:not([readonly])+label, 
+input[type=datetime-local]:focus:not([readonly])+label, 
+input[type=email]:focus:not([readonly])+label, 
+input[type=number]:focus:not([readonly])+label, 
+input[type=password]:focus:not([readonly])+label, 
+input[type=search]:focus:not([readonly])+label, 
+input[type=tel]:focus:not([readonly])+label, 
+input[type=text]:focus:not([readonly])+label, 
+input[type=time]:focus:not([readonly])+label, 
+input[type=url]:focus:not([readonly])+label, 
+textarea.materialize-textarea:focus:not([readonly])+label {
 	color: #ffcd00;
 }
