--- a/components/stylesheets/layout/_intro-block.scss
+++ b/components/stylesheets/layout/_intro-block.scss
@@ -41,7 +41,7 @@
 			line-height: 1;
 			margin: 5px;
 			text-align: left;
-			color: inherit;
+			color: #263238;
 			height: auto;
 			border-radius: 0px;
 			&:hover {
