--- a/components/stylesheets/layout/_app-info.scss
+++ b/components/stylesheets/layout/_app-info.scss
@@ -2,8 +2,16 @@
 	padding-top: 4%;
 	padding-bottom: 3%;
 	background: #f7f7f7;
+	h2 {
+		@media(max-width:767px) {
+			font-size: 24px;
+		}
+	}
 	p {
 		margin: 0;
+		@media(max-width:767px) {
+			font-size: 14px;
+		}
 	}
 	.col {
 		padding-top: 10px;
