--- a/components/stylesheets/layout/_features.scss
+++ b/components/stylesheets/layout/_features.scss
@@ -6,6 +6,15 @@
 		@media(max-width:992px) {
 			margin-top: 0;
 		}
+		@media(max-width:767px) {
+			font-size: 24px;
+		}
+	}
+	p {
+		margin: 0;
+		@media(max-width:767px) {
+			font-size: 14px;
+		}
 	}
 	img {
 		max-width: 100%;
