--- a/components/stylesheets/layout/_login-web-app.scss
+++ b/components/stylesheets/layout/_login-web-app.scss
@@ -20,8 +20,10 @@
 		background: #f7f7f7;
 		color: #9e9e9e;
 		font-size: 18px;
+		line-height: 1;
+		height: auto;
 		margin-right: 10px;
-		padding: 0 1rem;
+		padding: 1rem;
 		&:hover {
 			color: #ffcd00;
 		}
