--- a/components/stylesheets/layout/_intro-block.scss
+++ b/components/stylesheets/layout/_intro-block.scss
@@ -1,7 +1,6 @@
 .intro-block {
 	width: 100%;
 	height: auto;
-	display: inline-block;
 	background: #212121 url(../images/bg-img.jpg);
 	background-size: cover;
 	background-position: 50% 50%;
@@ -11,6 +10,7 @@
 	padding-top: 10%;
 	padding-bottom: 10%;
 	z-index: 1;
+	overflow: hidden;
 	.container {
 		position: relative;
 		z-index: 2;
