--- a/components/stylesheets/modules/_navigation.scss
+++ b/components/stylesheets/modules/_navigation.scss
@@ -8,10 +8,12 @@
   	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   	height: auto;
   	padding-top: 0;
+  	padding-bottom: 0;
   }
 	.brand-logo {
 		text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
 		color: #ffcd00;
+		font-family: "Hiho-Brand";
 	}
 	.btn {
 		background-color: transparent;
