--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@ body {
   src: url("Typ1451-Bold.eot");
   url: "Typ1451-Bold.eot"; }
 
+@font-face {
+  font-family: "Hiho-Brand";
+  src: url("Typ1451-Bold.ttf"), url("Typ1451-Bold.eot"); }
+
 a {
   outline: none; }
   a:focus {
@@ -42,10 +46,20 @@ h5 {
   background: #212121;
   color: #9e9e9e;
   padding-top: 2%; }
+  #footer .brand-logo {
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+    color: #ffcd00;
+    font-family: "Hiho-Brand";
+    font-size: 30px; }
   #footer .contact-info-lists li {
     margin-bottom: 15px; }
     #footer .contact-info-lists li a {
       color: #9e9e9e; }
+      #footer .contact-info-lists li a:hover {
+        color: #ffcd00;
+        transition: all 0.3s ease-out; }
+        #footer .contact-info-lists li a:hover span {
+          background: #ffcd00; }
       #footer .contact-info-lists li a .btn {
         background: #fff;
         border-radius: 50%;
@@ -103,7 +117,6 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
 .intro-block {
   width: 100%;
   height: auto;
-  display: inline-block;
   background: #212121 url(../images/bg-img.jpg);
   background-size: cover;
   background-position: 50% 50%;
@@ -112,7 +125,8 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
   padding-right: 15px;
   padding-top: 10%;
   padding-bottom: 10%;
-  z-index: 1; }
+  z-index: 1;
+  overflow: hidden; }
   .intro-block .container {
     position: relative;
     z-index: 2; }
@@ -173,10 +187,12 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
   .navigation.active {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     height: auto;
-    padding-top: 0; }
+    padding-top: 0;
+    padding-bottom: 0; }
   .navigation .brand-logo {
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
-    color: #ffcd00; }
+    color: #ffcd00;
+    font-family: "Hiho-Brand"; }
   .navigation .btn {
     background-color: transparent;
     border: 1px solid #ffcd00; }
@@ -250,6 +266,20 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
 #carousel .grabbing {
   cursor: url(/images/grabbing.png) 8 8, move; }
 
+#work-carousel {
+  overflow: hidden; }
+  #work-carousel .item {
+    margin: 3px;
+    max-width: 200px;
+    max-height: 200px;
+    overflow: hidden; }
+    #work-carousel .item img {
+      width: 100%;
+      display: inline-block;
+      vertical-align: top; }
+  #work-carousel .grabbing {
+    cursor: url(/images/grabbing.png) 8 8, move; }
+
 .login-web-app {
   background: rgba(33, 33, 33, 0.8) url(../images/bg-img.jpg);
   color: #f7f7f7;
@@ -285,7 +315,8 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
 
 .download-app {
   padding-bottom: 4%;
-  background: #f7f7f7; }
+  background: #f7f7f7;
+  overflow: hidden; }
   .download-app h2 {
     margin-top: 0; }
   .download-app .btn {
