--- a/components/stylesheets/styles.scss
+++ b/components/stylesheets/styles.scss
@@ -4,7 +4,7 @@
 
 @import "layout/intro-block";
 @import "modules/navigation";
-@import "layout/app-info";
+@import "layout/job-info";
 @import "layout/features";
 @import "layout/my-carousel";
 @import "layout/login-web-app";
