--- a/components/stylesheets/layout/_job-info.scss
+++ b/components/stylesheets/layout/_job-info.scss
@@ -1,7 +1,14 @@
-.app-info {
+.job-info {
 	padding-top: 4%;
 	padding-bottom: 3%;
 	background: #f7f7f7;
+	.title {
+		font-size: 40px;
+		margin-bottom: 40px;
+		@media(max-width:767px) {
+			font-size: 30px;
+		}
+	}
 	h2 {
 		@media(max-width:767px) {
 			font-size: 24px;
