--- a/components/stylesheets/layout/_my-carousel.scss
+++ b/components/stylesheets/layout/_my-carousel.scss
@@ -22,7 +22,7 @@
 #work-carousel {
 	overflow: hidden;
 	.item {
-		margin: 3px;
+		margin: 0 auto;
 		max-width: 200px;
 		max-height: 200px;
 		overflow: hidden;
