--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,8 @@ h5 {
   color: #9e9e9e;
   padding-top: 2%; }
   #footer .brand-logo {
+    display: block;
+    margin-top: 20px;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
     color: #ffcd00;
     font-family: "Hiho-Brand";
@@ -54,7 +56,11 @@ h5 {
   #footer .contact-info-lists li {
     margin-bottom: 15px; }
     #footer .contact-info-lists li a {
-      color: #9e9e9e; }
+      color: #9e9e9e;
+      font-size: 14px; }
+      @media (max-width: 359px) {
+        #footer .contact-info-lists li a {
+          font-size: 12px; } }
       #footer .contact-info-lists li a:hover {
         color: #ffcd00;
         transition: all 0.3s ease-out; }
@@ -84,6 +90,9 @@ h5 {
     padding: 20px 0; }
     #footer .footer-bottom p {
       margin: 0; }
+      @media (max-width: 767px) {
+        #footer .footer-bottom p {
+          font-size: 14px; } }
 
 input:not([type]):focus:not([readonly]),
 input[type=date]:focus:not([readonly]),
@@ -204,22 +213,28 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
   .side-nav li a:hover {
     color: #fff; }
 
-.app-info {
+.job-info {
   padding-top: 4%;
   padding-bottom: 3%;
   background: #f7f7f7; }
+  .job-info .title {
+    font-size: 40px;
+    margin-bottom: 40px; }
+    @media (max-width: 767px) {
+      .job-info .title {
+        font-size: 30px; } }
   @media (max-width: 767px) {
-    .app-info h2 {
+    .job-info h2 {
       font-size: 24px; } }
-  .app-info p {
+  .job-info p {
     margin: 0; }
     @media (max-width: 767px) {
-      .app-info p {
+      .job-info p {
         font-size: 14px; } }
-  .app-info .col {
+  .job-info .col {
     padding-top: 10px;
     padding-bottom: 10px; }
-    .app-info .col:hover {
+    .job-info .col:hover {
       color: #A08919;
       box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21);
       transition: all 0.4s ease-in-out; }
@@ -269,7 +284,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
 #work-carousel {
   overflow: hidden; }
   #work-carousel .item {
-    margin: 3px;
+    margin: 0 auto;
     max-width: 200px;
     max-height: 200px;
     overflow: hidden; }
