--- a/components/stylesheets/base/_variables.scss
+++ b/components/stylesheets/base/_variables.scss
@@ -7,9 +7,9 @@ $base-form-placeholder-color: #adadad;
 $base-input-border-color: #d7d8d8;
 
 // base fonts
-$base-font-size: 18px;
-$base-line-height: 24px;
-$base-font-family: 'hiup-medium';
+$base-font-size: 16px;
+$base-line-height: 20px;
+$base-font-family: 'Lato', sans-serif;
 $base-font-style: normal;
 $base-font-weight: 400;
 
