--- a/components/stylesheets/styles.scss
+++ b/components/stylesheets/styles.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,300,400italic);
 @import "base/variables";
 @import "base/mixins";
 @import "base/base";
