--- a/components/stylesheets/base/_base.scss
+++ b/components/stylesheets/base/_base.scss
@@ -79,6 +79,9 @@ h5 {font-size: 16px;}
 			    text-align: center;
 			    width: 35px;
 			    margin-right: 20px;
+			    @media(max-width:359px) {
+						margin-right: 10px;
+						}
 			    .fa {
 			    	color: #212121;
 			    }
