--- a/components/stylesheets/layout/_login-web-app.scss
+++ b/components/stylesheets/layout/_login-web-app.scss
@@ -1,5 +1,7 @@
 .login-web-app {
 	background: rgba(33, 33, 33, 0.8) url(../images/bg-img.jpg);
+	background-size: cover;
+	background-position: 50% 50%;
 	color: #f7f7f7;
 	padding-top: 6%;
 	padding-bottom: 6%;
