changing in navigation

--- a/components/stylesheets/modules/_navigation.scss
+++ b/components/stylesheets/modules/_navigation.scss
@@ -18,6 +18,12 @@
 	.btn {
 		background-color: transparent;
 		border: 1px solid #ffcd00;
+
+		@media(min-width: 993px){
+			padding: 8px 20px;
+			height: auto;
+			line-height: 1;
+		}
 	}
 
 }
