--- a/components/stylesheets/layout/_my-carousel.scss
+++ b/components/stylesheets/layout/_my-carousel.scss
@@ -1,3 +1,4 @@
+// Start My Carousel
 .my-carousel {
 	background: #f7f7f7;
 	padding-top: 4%;
@@ -18,14 +19,16 @@
     cursor:url(/images/grabbing.png) 8 8, move;
 	}
 }
-
+// End My Carousel
+// =============================================
+// Start Company BLock
 .company-block {
 	h2 {
 		margin-top: 5%;
 	}
 }
 
-#work-carousel {
+#company-carousel {
 	overflow: hidden;
 	.item {
 		margin: 0 auto;
@@ -42,3 +45,4 @@
     cursor:url(/images/grabbing.png) 8 8, move;
 	}
 }
+// End Company BLock
