putting grab in recruters

--- a/components/stylesheets/layout/_employers.scss
+++ b/components/stylesheets/layout/_employers.scss
@@ -80,6 +80,9 @@
   		margin-bottom: 10px;
 		}
 	}
+	.grabbing { 
+    cursor:url(/images/grabbing.png) 8 8, move;
+	}
 }
 // End Recruters Block
 // =============================================
