--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,35 @@ input[type=url]:focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
   color: #ffcd00; }
 
+.video-section .text-wrap {
+  margin-top: 10%; }
+  .video-section .text-wrap h2 {
+    color: #40c296;
+    font-weight: 700;
+    text-align: center; }
+  .video-section .text-wrap .fa {
+    width: 100%;
+    color: #40c296;
+    font-size: 60px;
+    text-align: center; }
+
+.video-section .buttonBar {
+  display: none; }
+
+.video-section .pattern-overlay {
+  background-color: rgba(71, 71, 71, 0.59);
+  padding: 110px 0 32px;
+  min-height: 380px;
+  /* Incase of overlay problems just increase the min-height*/ }
+  @media (max-width: 1199px) {
+    .video-section .pattern-overlay {
+      min-height: 350px; } }
+  @media (max-width: 479px) {
+    .video-section .pattern-overlay {
+      min-height: 350px; } }
+  .video-section .pattern-overlay .player {
+    font-size: 1px; }
+
 .intro-block {
   width: 100%;
   height: auto;
@@ -308,17 +337,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
     cursor: url(/images/grabbing.png) 8 8, move; }
 
 .login-web-app {
-  background: rgba(33, 33, 33, 0.8) url(../images/bg-img.jpg);
-  background-size: cover;
-  background-position: 50% 50%;
-  color: #f7f7f7;
-  padding-top: 6%;
-  padding-bottom: 6%;
-  position: relative;
-  z-index: 1; }
-  .login-web-app .container {
-    position: relative;
-    z-index: 2; }
+  color: #f7f7f7; }
   .login-web-app h2 {
     font-weight: 700;
     color: #ffcd00; }
