change login web app style

--- a/components/stylesheets/layout/_login-web-app.scss
+++ b/components/stylesheets/layout/_login-web-app.scss
@@ -1,11 +1,11 @@
 .login-web-app {
-	// background: rgba(33, 33, 33, 0.8) url(../images/bg-img.jpg);
-	// background-size: cover;
-	// background-position: 50% 50%;
 	color: #f7f7f7;
 	h2 {
 		font-weight: 700;
 		color: #ffcd00;
+		@media(max-width: 479px) {
+			margin: 0;
+		}
 	}
 	h3 {
 		font-weight: 700;
