--- a/components/stylesheets/base/_base.scss
+++ b/components/stylesheets/base/_base.scss
@@ -28,7 +28,73 @@ h5 {font-size: 16px;}
 #wrapper {
 	position: relative;
 }
+// Start Form
+input:not([type]):focus:not([readonly]),
+input[type=date]:focus:not([readonly]), 
+input[type=datetime-local]:focus:not([readonly]), 
+input[type=email]:focus:not([readonly]), 
+input[type=number]:focus:not([readonly]), 
+input[type=password]:focus:not([readonly]), 
+input[type=search]:focus:not([readonly]), 
+input[type=tel]:focus:not([readonly]), 
+input[type=text]:focus:not([readonly]), 
+input[type=time]:focus:not([readonly]), 
+input[type=url]:focus:not([readonly]), 
+textarea.materialize-textarea:focus:not([readonly]) {
+	border-color: #ffcd00;
+	box-shadow: 0 1px 0 0 #ffcd00;
+}
 
+input:not([type]):focus:not([readonly])+label, 
+input[type=date]:focus:not([readonly])+label, 
+input[type=datetime-local]:focus:not([readonly])+label, 
+input[type=email]:focus:not([readonly])+label, 
+input[type=number]:focus:not([readonly])+label, 
+input[type=password]:focus:not([readonly])+label, 
+input[type=search]:focus:not([readonly])+label, 
+input[type=tel]:focus:not([readonly])+label, 
+input[type=text]:focus:not([readonly])+label, 
+input[type=time]:focus:not([readonly])+label, 
+input[type=url]:focus:not([readonly])+label, 
+textarea.materialize-textarea:focus:not([readonly])+label {
+	color: #ffcd00;
+}
+// End Form
+// =============================
+// Start video section
+.video-section {
+	.text-wrap {
+		margin-top: 10%;
+		h2 {
+			color:#40c296;
+			font-weight: 700;
+			text-align:center;
+		}
+		.fa {
+			width: 100%;
+			color:#40c296;
+			font-size: 60px;
+			text-align:center;
+		}
+	}
+	.buttonBar{display:none;}
+	.pattern-overlay {
+		background-color: rgba(71, 71, 71, 0.59);
+		padding: 110px 0 32px;
+		min-height: 380px;
+		/* Incase of overlay problems just increase the min-height*/
+		@media(max-width:1199px){
+			min-height: 350px;
+		}
+		@media(max-width:479px){
+			min-height: 350px;
+		}
+		.player {font-size: 1px;}
+	}
+}
+// End video section
+// ================================
+// Start footer
 #footer {
 	background: #212121;
 	color: #9e9e9e;
@@ -98,66 +164,4 @@ h5 {font-size: 16px;}
 		}
 	}
 }
-
-input:not([type]):focus:not([readonly]),
-input[type=date]:focus:not([readonly]), 
-input[type=datetime-local]:focus:not([readonly]), 
-input[type=email]:focus:not([readonly]), 
-input[type=number]:focus:not([readonly]), 
-input[type=password]:focus:not([readonly]), 
-input[type=search]:focus:not([readonly]), 
-input[type=tel]:focus:not([readonly]), 
-input[type=text]:focus:not([readonly]), 
-input[type=time]:focus:not([readonly]), 
-input[type=url]:focus:not([readonly]), 
-textarea.materialize-textarea:focus:not([readonly]) {
-	border-color: #ffcd00;
-	box-shadow: 0 1px 0 0 #ffcd00;
-}
-
-input:not([type]):focus:not([readonly])+label, 
-input[type=date]:focus:not([readonly])+label, 
-input[type=datetime-local]:focus:not([readonly])+label, 
-input[type=email]:focus:not([readonly])+label, 
-input[type=number]:focus:not([readonly])+label, 
-input[type=password]:focus:not([readonly])+label, 
-input[type=search]:focus:not([readonly])+label, 
-input[type=tel]:focus:not([readonly])+label, 
-input[type=text]:focus:not([readonly])+label, 
-input[type=time]:focus:not([readonly])+label, 
-input[type=url]:focus:not([readonly])+label, 
-textarea.materialize-textarea:focus:not([readonly])+label {
-	color: #ffcd00;
-}
-
- // video section
-.video-section {
-	.text-wrap {
-		margin-top: 10%;
-		h2 {
-			color:#40c296;
-			font-weight: 700;
-			text-align:center;
-		}
-		.fa {
-			width: 100%;
-			color:#40c296;
-			font-size: 60px;
-			text-align:center;
-		}
-	}
-	.buttonBar{display:none;}
-	.pattern-overlay {
-		background-color: rgba(71, 71, 71, 0.59);
-		padding: 110px 0 32px;
-		min-height: 380px; 
-		/* Incase of overlay problems just increase the min-height*/
-		@media(max-width:1199px){
-			min-height: 350px;
-		}
-		@media(max-width:479px){
-			min-height: 350px;
-		}
-		.player {font-size: 1px;}
-	}
-}
+// End footer
