--- a/components/stylesheets/layout/_login-web-app.scss
+++ b/components/stylesheets/layout/_login-web-app.scss
@@ -10,7 +10,7 @@
 	h3 {
 		font-weight: 700;
 	}
-	.btn {
+	.login {
 		background: #f7f7f7;
 		color: #9e9e9e;
 		font-size: 18px;
@@ -28,6 +28,33 @@
 		@media(max-width: 359px) {
 			display: block;
 			margin-bottom: 10px;
+		}
+	}
+	.modal {
+		width: 90%;
+		height: auto;
+		max-height: 100%;
+		iframe {
+			width: 100%;
+			height: 640px;
+			@media(max-width: 767px) {
+				height: auto;
+			}
+		}
+	}
+	.hiho-video {
+		background: transparent;
+		box-shadow: none;
+		margin-bottom: 5px;
+		padding: 1px;
+		line-height: 1;
+		height: auto;
+		.fa {
+			font-size: 60px;
+			&:hover {
+			color: #ffcd00;
+			transition: all 0.5s ease;
+			}
 		}
 	}
 }
