--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
     font-size: 1px; }
 
 #footer {
-  background: #212121;
+  background: #465963;
   color: #9e9e9e;
   padding-top: 2%; }
   #footer .brand-logo {
@@ -214,7 +214,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
       font-weight: 700; }
 
 .navigation {
-  background-color: #212121;
+  background-color: #465963;
   height: 80px;
   padding: 8px 15px;
   transition: all 0.5s ease-in-out;
@@ -346,7 +346,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
         margin: 0; } }
   .login-web-app h3 {
     font-weight: 700; }
-  .login-web-app .btn {
+  .login-web-app .login {
     background: #f7f7f7;
     color: #9e9e9e;
     font-size: 18px;
@@ -354,15 +354,37 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
     height: auto;
     margin-right: 10px;
     padding: 1rem; }
-    .login-web-app .btn:hover {
+    .login-web-app .login:hover {
       color: #ffcd00; }
-    .login-web-app .btn .fa {
+    .login-web-app .login .fa {
       vertical-align: top;
       margin-right: 10px; }
     @media (max-width: 359px) {
-      .login-web-app .btn {
+      .login-web-app .login {
         display: block;
         margin-bottom: 10px; } }
+  .login-web-app .modal {
+    width: 90%;
+    height: auto;
+    max-height: 100%; }
+    .login-web-app .modal iframe {
+      width: 100%;
+      height: 640px; }
+      @media (max-width: 767px) {
+        .login-web-app .modal iframe {
+          height: auto; } }
+  .login-web-app .hiho-video {
+    background: transparent;
+    box-shadow: none;
+    margin-bottom: 5px;
+    padding: 1px;
+    line-height: 1;
+    height: auto; }
+    .login-web-app .hiho-video .fa {
+      font-size: 60px; }
+      .login-web-app .hiho-video .fa:hover {
+        color: #ffcd00;
+        transition: all 0.5s ease; }
 
 .download-app {
   padding-bottom: 4%;
@@ -470,7 +492,7 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
   #recruters .item img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 150px;
     margin-bottom: 10px; }
 
 #recruters .grabbing {
@@ -498,6 +520,9 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
     margin-bottom: 20px;
     padding: 10px;
     background: #fff; }
+    .info-block .text-wrap img {
+      width: 100%;
+      display: block; }
     .info-block .text-wrap:hover {
       color: #A08919;
       box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21);
