--- a/components/stylesheets/modules/_navigation.scss
+++ b/components/stylesheets/modules/_navigation.scss
@@ -18,7 +18,6 @@
 	.btn {
 		background-color: transparent;
 		border: 1px solid #ffcd00;
-
 		@media(min-width: 993px){
 			padding: 8px 20px;
 			height: auto;
@@ -31,11 +30,14 @@
 		font-size: 16px;
 		line-height: 1;
 		height: auto;
-		margin-right: 10px;
+		margin-right: 8px;
 	}
 }
 
 .side-nav {
+	@media(min-width: 993px){
+		display: none;
+	}
 	li{
 		margin: 20px 0;
 		&:hover,
