--- a/css/styles.css
+++ b/css/styles.css
@@ -242,7 +242,11 @@ textarea.materialize-textarea:focus:not([readonly]) + label {
     font-size: 16px;
     line-height: 1;
     height: auto;
-    margin-right: 10px; }
+    margin-right: 8px; }
+
+@media (min-width: 993px) {
+  .side-nav {
+    display: none; } }
 
 .side-nav li {
   margin: 20px 0; }
